--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>My favourite hobby </title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <ul class="menu">
