--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
   <head>
-    <title>My favourite hobby </title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Favourite Hobby</title>
     <link rel="stylesheet" href="style.css">
-  </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Supermercado+One&display=swap" rel="stylesheet">
+
+</head>
   <body>
     <ul class="menu">
       <li class="link"><a href="#bio">About</a></li>
