--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <li class="link"><a href="#bio">About</a></li>
       <li class="link"><a href="#features">Features</a></li>
       <li class="link"><a href ="#reference">My Cars</a></li>
+       <li class="link"><a href ="#hypercars">Hyper Cars</a></li>      
       <li class="link"><a href="#bio">My Profile</a></li>
       <li class="link"><a href="#Contact">Contact</a></li>
           
